--- a/test/index.html
+++ b/test/index.html
@@ -31,7 +31,7 @@
   <script type="text/javascript" src="calculator-test.js"></script>
 
   <script type="text/javascript">
-  // if test is run mocha cli (PHANTOMJS), use a reporter
+  // if test is run via cli (PHANTOMJS), use a reporter (else run in browser)
   if (window.PHANTOMJS) {
     blanket.options("reporter", "../node_modules/grunt-blanket-mocha/support/grunt-reporter.js");
   } else {
